adding loadUsers method and create Stock Manager files